Bug 1452660 - Tag queries pointing to an invalid folder are being rewritten as empty urls. r=standard8

MozReview-Commit-ID: FUmmYewl8Vt

--HG--
extra : rebase_source : 6f5d940bd1ae519ee54f3acf5b93a244d12b0db9